--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     <div class="container">
       <button id="revealButton">🎉 Click to Reveal Birthday Message! 🎉</button>
       <div id="birthdayMessage" class="hidden">
+        <audio
+          id="myAudio"
+          src="/sounds/happy-birthday-to-you-bossa-nova-style-arrangement-21399.mp3"
+          preload="auto"
+        ></audio>
         <h1>Happy Birthday, ostaza <span id="first">RONA</span> 🎂</h1>
         <p>
           احلي كل سنة و انت طيبة ده حاجة صغيرة عشان عارف بتحبي حاجة معمولة
