--- a/index.html
+++ b/index.html
@@ -21,27 +21,14 @@
           src="sounds/happy-birthday-to-you-bossa-nova-style-arrangement-21399.mp3"
           preload="auto"
         ></audio>
-        <h1>Happy Birthday, ostaza <span id="first">RONA</span> 🎂</h1>
+        <h1>Happy Birthday <span id="first">ALI</span> 🎂</h1>
         <p>
-          احلي كل سنة و انت طيبة ده حاجة صغيرة عشان عارف بتحبي حاجة معمولة
-          سبيشيال بس استعنت ب مساعدة جوجل و شوية ذكاء اصطناعي 🙈 يارب تبقي سنة
-          سعيدة و جميلة و مليانة إنجازات و تكملي اكتشاف ف نفسك و مواهبك
-          المستخبية الرائعة اللي هتوديكي حتة تانية ان شاء الله عشان انتي قدها و
-          قدود و انا والله و بتمنالك كل خيررر و سابورتر كبير و يارب تبقي اجمد
-          فويس اوفر او او مهندسة نتورك جامدة او تفتحي بيكاري او صاحبة بيدج ضحكتك
-          ب دنيا 😂 ف كل حالات أيا كان انتي فين هتعملي حلو انا واثق
-          <br />
-          <br />
-          و أخيرا بس اهم حاجة عايز اشكرك جدا علي مساعدتك ف حاجات كتير معايا و
-          اهتمامك ب تفاصيل و شكرا انك قلبك ابيض و جميل كدة و يارب يديم الود يارب
-          و شكرا انك استحملتي مني حاجات مش مطالبة تستحمليها و عبثيات و تصرفات
-          طفولية و ان شاء الله اخر مرة و نضج بقي
+          happy birthday
           <br />
           <br />
           <span
             ><b
-              >Enjoy it ostaza Rona gdnnnnnn ❤️❤️❤️❤️❤️❤️❤️ keep smiling 34an
-              donya a7la b d7ktk 🤪🤩
+              >Enjoy gdnnnnnn ❤️❤️❤️❤️❤️❤️❤️
             </b></span
           >
         </p>
