Fix typo in enjoyment message

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <br />
           <span
             ><b
-              >Enjoy gdnnnnnn ❤️❤️❤️❤️❤️❤️❤️
+              >Enjoyyyyy
             </b></span
           >
         </p>
